# StockVision

./: .gitignore  README.md  pyproject.toml  run.ps1
src/stockvision/: __main__.py  app.py
src/stockvision/core/: binance_stream.py  market_data.py
src/stockvision/ui/: chart_widget.py  interactive_chart_view.py  main_window.py  theme.py
