[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockvision"
version = "0.1.0"
description = "StockVision: Modern market monitor (stocks + crypto) with professional GUI and charts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
  "qtawesome>=1.3.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
stockvision = "stockvision.app:main"
